kitten/reported_bugs/rust/rust-83472/stderr.txt
error[E0425]: cannot find value `y` in this scope

  --> mutant.rs:12:9

   |

12 | yield * y . borrow ( ) ;

   |         ^ not found in this scope



error[E0658]: yield syntax is experimental

  --> mutant.rs:12:1

   |

12 | yield * y . borrow ( ) ;

   | ^^^^^^^^^^^^^^^^^^^^^^

   |

   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information

   = help: add `#![feature(generators)]` to the crate attributes to enable



error[E0627]: yield expression outside of generator literal

  --> mutant.rs:12:1

   |

12 | yield * y . borrow ( ) ;

   | ^^^^^^^^^^^^^^^^^^^^^^



error[E0277]: the trait bound `&str: DoubleEndedIterator` is not satisfied

  --> mutant.rs:11:41

   |

11 | pub fn yes_double_ended_iterator ( ) -> impl DoubleEndedIterator {

   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `DoubleEndedIterator` is not implemented for `&str`



thread 'rustc' panicked at 'assertion failed: body.yield_ty().is_some() == universal_regions.yield_ty.is_some()', compiler/rustc_mir/src/borrow_check/type_check/input_output.rs:106:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.53.0-nightly (07e0e2ec2 2021-03-24) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [mir_borrowck] borrow-checking `yes_double_ended_iterator`

#1 [type_of] computing type of `yes_double_ended_iterator::{opaque#0}`

end of query stack

error: aborting due to 4 previous errors



Some errors have detailed explanations: E0277, E0425, E0627, E0658.

For more information about an error, try `rustc --explain E0277`.

